<resources>
    <string name="app_name">Pomodoro</string>
    <string name="play">Play</string>
    <string name="channel_name" translatable="false">com.nemjava.pomodoro.screen</string>
    <string name="channel_description" translatable="false">PomodroApp</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="skip">Skip</string>
    <string name="continue_button">Continue</string>
    <string name="stop">Stop</string>
    <string name="quit">Quit</string>
    <string name="about">About</string>
    <string name="select_timer_animation">Select timer animation</string>
    <string name="view_source_code_at_github">View source code on GitHub</string>
    <string name="send_feedback">Send feedback</string>
    <string name="troubleshooting">Troubleshooting</string>
    <string name="tutorial">Tutorial</string>
    <string name="version_1_0_0">Version 1.0.0</string>

    <string name="timer_type_pomodoro">Currently in Pomodoro</string>
    <string name="timer_type_break">Currently in Break</string>
    <string name="timer_type_completed">Congratulations Session completed</string>
    <string name="timer_type_long_break">Currently in Long Break</string>
    <string name="pomodoro_in_progress_notification">Pomodoro in progress</string>
    <string name="break_in_progress_notification">Break in progress</string>
    <string name="long_break_in_progress_notification">Long Break in progress</string>
    <string name="pomodoro_is_paused_notification">Pomodoro is paused</string>
    <string name="break_is_paused_notification">Break is paused</string>
    <string name="long_break_is_paused_notification">Long Break is paused</string>
    <string name="continue_notification">Continue?</string>
    <string name="session_completed">Session Completed</string>
    <string name="pomodoro">Pomodoro</string>
    <string name="pomodoro_duration_min">Pomodoro duration(min)</string>
    <string name="break_duration_min">Break duration(min)</string>
    <string name="long_break_duration_min">Long Break duration(min)</string>
    <string name="session">Session</string>
    <string name="sessions">Sessions</string>
    <string name="ready_for_new_session">Ready for New Session</string>
    <string name="current_plan">Current Plan</string>
    <string name="edit">Edit</string>
    <string name="edit_timer">Edit Timer</string>
    <string name="close">Close</string>
    <string name="focus">Focus</string>
    <string name="duration_in_minutes">Duration in minutes</string>
    <string name="break_label">Break</string>
    <string name="short_rest_duration">Short rest duration</string>
    <string name="long_break_label">Long Break</string>
    <string name="after_full_cycle">After full cycle</string>
    <string name="sessions_per_cycle">Sessions per cycle</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="plan_durations_format">%1$d / %2$d / %3$d m</string>
    <string name="plan_sessions_format">%1$d sessions</string>
    <string name="session_status_format" translatable="false">%1$s • %2$d/%3$d</string>
    <string name="selected">Selected</string>
    <string name="animation_cat">Cat</string>
    <string name="animation_running_cat">Running Cat</string>
    <string name="animation_rainbow_cat">Rainbow Cat</string>
    <string name="animation_loving_cat">Loving Cat</string>
    <string name="animation_cat_sleeping">Sleeping Cat</string>
    <string name="animation_cat_crying">Crying Cat</string>
    <string name="animation_bear_dancing">Dancing Bear</string>
    <string name="animation_bird_flying">Flying Bird</string>
    <string name="animation_boy_exercising">Exercising Boy</string>
    <string name="animation_boy_meditating">Meditating Boy</string>
    <string name="animation_girl_meditating">Meditating Girl</string>
    <string name="animation_woman_designer">Woman Designer</string>
    <string name="animation_gibli_anime_girl">Anime Girl</string>
    <string name="animation_earth_rotating">Rotating Earth</string>
    <string name="animation_planet_orbit">Orbiting Planet</string>
    <string name="animation_space_rocket">Space Rocket</string>
</resources>
