<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/screen_background"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/confettiAnimation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="false"
            app:lottie_loop="false" />

        <TextView
            android:id="@+id/timerType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:padding="5dp"
            android:text="@string/app_name"
            android:textColor="@color/screen_text_secondary"
            android:textSize="@dimen/text_size_body"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/editPlanAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/edit_timer"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_edit_pencil"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/screen_text_primary" />

        <ImageButton
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_palette"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/screen_text_primary" />

        <antonkozyriatskyi.circularprogressindicator.CircularProgressIndicator
            android:id="@+id/circular_progress"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:outlineAmbientShadowColor="#FFFFFF"
            app:direction="clockwise"
            app:dotColor="@color/dialog_button_primary_bg"
            app:dotWidth="18dp"
            app:drawDot="true"
            app:enableProgressAnimation="true"
            app:gradientEndColor="@color/screen_accent"
            app:gradientType="linear"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timerType"
            app:layout_constraintWidth_max="@dimen/circular_progress_max_size"
            app:progressCap="round"
            app:progressColor="@color/dialog_button_primary_bg"
            app:progressStrokeWidth="12dp"
            app:startAngle="270"
            app:textColor="@color/screen_text_primary"
            app:textSize="@dimen/text_size_timer" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/session_status_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:cardBackgroundColor="@color/button_color"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circular_progress">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingTop="6dp"
                android:paddingEnd="15dp"
                android:paddingBottom="6dp">

                <ImageView
                    android:id="@+id/sessionStatusIcon"
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:layout_marginEnd="6dp"
                    android:src="@android:drawable/ic_lock_idle_alarm"
                    app:tint="@color/screen_accent" />

                <TextView
                    android:id="@+id/sessionStatusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/screen_accent"
                    android:textSize="@dimen/text_size_session"
                    android:textStyle="bold"
                    tools:text="Session • 1/4" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/action_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/session_status_chip">

            <ImageButton
                android:id="@+id/action_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="15dp"
                android:background="@drawable/bg_button_shape"
                android:src="@drawable/ic_baseline_play"
                app:tint="@color/white"
                app:backgroundTint="@null"/>

            <ImageButton
                android:id="@+id/quit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_marginLeft="10dp"
                android:text="@string/quit"
                android:background="@drawable/bg_button_shape"
                android:backgroundTint="@color/grey500"
                android:src="@drawable/ic_baseline_stop"
                android:visibility="gone"
                app:tint="@color/white" />
        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/timerAnimation"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/action_container"
            app:lottie_autoPlay="false"
            app:lottie_loop="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
